# Solomon

./: CMakeLists.txt  README.md
OrderBook.Console/: CMakeLists.txt  OrderBook.Console.cpp  OrderBook.Console.h  OrderBook.Console.vcxproj  OrderBook.Console.vcxproj.filters
OrderBook.Core/: AskStore.cpp  AskStore.h  BidStore.cpp  BidStore.h  Book.cpp  Book.h  BookConsole.cpp  BookConsole.h  CMakeLists.txt  CompareOrder.cpp  IVolumeMap.h  Map.h  Order.cpp  Order.h  OrderBook.Core.cpp  OrderBook.Core.h  OrderConsole.cpp  OrderConsole.h  Store.cpp  Store.h  VolumeMap.cpp  VolumeMap.h  VolumeStore.cpp  VolumeStore.h
OrderBook.Core.Test/: OrderBook.Core.Test.vcxproj  test.cpp
OrderBook.Core/Exceptions/: Store.Exception.cpp  Store.Exception.h
